seaqt/QtWidgets/gen_qcombobox.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QStyleOptionComboBox QStyleOptionComboBox;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
bool QComboBox_override_virtual_minimumSizeHint(void* self, intptr_t slot);
bool QComboBox_override_virtual_showPopup(void* self, intptr_t slot);
void QComboBox_virtualbase_showPopup(void* self);
bool QComboBox_override_virtual_hidePopup(void* self, intptr_t slot);
void QComboBox_virtualbase_hidePopup(void* self);
bool QComboBox_override_virtual_event(void* self, intptr_t slot);
bool QComboBox_virtualbase_event(void* self, QEvent* event);
bool QComboBox_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QComboBox_virtualbase_inputMethodQuery(const void* self, int param1);
bool QComboBox_override_virtual_focusInEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_focusInEvent(void* self, QFocusEvent* e);
bool QComboBox_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_focusOutEvent(void* self, QFocusEvent* e);
bool QComboBox_override_virtual_changeEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_changeEvent(void* self, QEvent* e);
bool QComboBox_override_virtual_resizeEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_resizeEvent(void* self, QResizeEvent* e);
bool QComboBox_override_virtual_paintEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_paintEvent(void* self, QPaintEvent* e);
bool QComboBox_override_virtual_showEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_showEvent(void* self, QShowEvent* e);
bool QComboBox_override_virtual_hideEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_hideEvent(void* self, QHideEvent* e);
bool QComboBox_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_mousePressEvent(void* self, QMouseEvent* e);
bool QComboBox_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* e);
bool QComboBox_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_keyPressEvent(void* self, QKeyEvent* e);
bool QComboBox_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_keyReleaseEvent(void* self, QKeyEvent* e);
bool QComboBox_override_virtual_wheelEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_wheelEvent(void* self, QWheelEvent* e);
bool QComboBox_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* e);
bool QComboBox_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QComboBox_override_virtual_initStyleOption(void* self, intptr_t slot);
void QComboBox_virtualbase_initStyleOption(const void* self, QStyleOptionComboBox* option);
bool QComboBox_override_virtual_devType(void* self, intptr_t slot);
int QComboBox_virtualbase_devType(const void* self);
bool QComboBox_override_virtual_setVisible(void* self, intptr_t slot);
void QComboBox_virtualbase_setVisible(void* self, bool visible);
bool QComboBox_override_virtual_heightForWidth(void* self, intptr_t slot);
int QComboBox_virtualbase_heightForWidth(const void* self, int param1);
bool QComboBox_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QComboBox_virtualbase_hasHeightForWidth(const void* self);
bool QComboBox_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QComboBox_virtualbase_paintEngine(const void* self);
bool QComboBox_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QComboBox_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QComboBox_override_virtual_enterEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QComboBox_override_virtual_leaveEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_leaveEvent(void* self, QEvent* event);
bool QComboBox_override_virtual_moveEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QComboBox_override_virtual_closeEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QComboBox_override_virtual_tabletEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QComboBox_override_virtual_actionEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QComboBox_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QComboBox_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QComboBox_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QComboBox_override_virtual_dropEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QComboBox_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QComboBox_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QComboBox_override_virtual_metric(void* self, intptr_t slot);
int QComboBox_virtualbase_metric(const void* self, int param1);
bool QComboBox_override_virtual_initPainter(void* self, intptr_t slot);
void QComboBox_virtualbase_initPainter(const void* self, QPainter* painter);
bool QComboBox_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QComboBox_virtualbase_redirected(const void* self, QPoint* offset);
bool QComboBox_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QComboBox_virtualbase_sharedPainter(const void* self);
bool QComboBox_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QComboBox_virtualbase_focusNextPrevChild(void* self, bool next);
bool QComboBox_override_virtual_eventFilter(void* self, intptr_t slot);
bool QComboBox_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QComboBox_override_virtual_timerEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QComboBox_override_virtual_childEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_childEvent(void* self, QChildEvent* event);
bool QComboBox_override_virtual_customEvent(void* self, intptr_t slot);
void QComboBox_virtualbase_customEvent(void* self, QEvent* event);
void QComboBox_virtualbase_connectNotify(void* self, QMetaMethod* signal);